# Automated-QoE-Prediction-with-AI-ML

./: .gitignore  README.md  model.pkl  model_code.ipynb  pyproject.toml
DataSet/testset/UBE/: user201.csv  user202.csv  user203.csv  user204.csv  user205.csv  user206.csv  user207.csv  user208.csv  user209.csv  user210.csv  user211.csv  user212.csv  user213.csv  user214.csv  user215.csv  user216.csv  user217.csv  user218.csv  user219.csv  user220.csv  user221.csv  user222.csv  user223.csv  user224.csv  user225.csv  user226.csv  user227.csv  user228.csv  user229.csv  user230.csv  user231.csv  user232.csv  user233.csv  user234.csv  user235.csv  user236.csv  user237.csv  user238.csv  user239.csv  user240.csv  (+10 more)
DataSet/testset/UGE/: user201.csv  user202.csv  user203.csv  user204.csv  user205.csv  user206.csv  user207.csv  user208.csv  user209.csv  user210.csv  user211.csv  user212.csv  user213.csv  user214.csv  user215.csv  user216.csv  user217.csv  user218.csv  user219.csv  user220.csv  user221.csv  user222.csv  user223.csv  user224.csv  user225.csv  user226.csv  user227.csv  user228.csv  user229.csv  user230.csv  user231.csv  user232.csv  user233.csv  user234.csv  user235.csv  user236.csv  user237.csv  user238.csv  user239.csv  user240.csv  (+10 more)
DataSet/trainset/UBE/: user1.csv  user10.csv  user100.csv  user101.csv  user102.csv  user103.csv  user104.csv  user105.csv  user106.csv  user107.csv  user108.csv  user109.csv  user11.csv  user110.csv  user111.csv  user112.csv  user113.csv  user114.csv  user115.csv  user116.csv  user117.csv  user118.csv  user119.csv  user12.csv  (+126 more)
(+249 files in other folders)
