[tool.poetry]
name = "automated-qoe-prediction-with-ai-ml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
natsort = "^8.4.0"
holidays = "^0.70"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.1"
ipykernel = "^6.29.5"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
